NetworkPolicy/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 5000  
    targetPort: 5000 
  type: ClusterIP
