NetworkPolicy/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80    
    targetPort: 5000 
  type: LoadBalancer
